Change in Peng and Gang method